implementation of a sort of "timer" ;)

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 	<title>Tomato</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div id="app"></div>
+    <div id="app">
+        <h1>{{ name }}</h1>
+        <timer timer="0"></timer>
+    </div>
 <script type="text/javascript" src="dist/app.bundle.js"></script>
 
 </body>
